# shipping_quotation_service

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  local.db.env  local.env  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  deploy.yml  lint.yml  test.yml
migrations/: env.py
src/: app.py
src/api/: routes.py
src/api/v1/resources/: shipping_quotation.py
src/config/: settings.py
src/domains/shipping/: controller.py  dtos.py  models.py  repository.py
src/infra/database/: base.py  session.py
src/infra/database/repository/: base.py  repository.py
src/infra/middlewares/: cors.py
src/scripts/: initial_load.py
src/utils/: data.py
tests/: conftest.py
tests/test_api/test_resources/: test_health_check.py  test_shipping_quotation.py
tests/test_domains/test_shipping/: test_controller.py
